# parallelism_test

./: .gitignore  README.md  prd.md  pyproject.toml  requirements.txt  run.sh  wan_i2v_sp_test.py  wan_t2v_sp_test.py
samples/i2v/: sample_i2v.avif
